# prismoid

./: .editorconfig  .git-msg.txt  .gitattributes  .gitignore  .release-please-manifest.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  _typos.toml  codecov.yml  eslint.config.js  index.html  lefthook.yml  package.json  release-please-config.json  tsconfig.json  vite.config.ts
.github/: CODEOWNERS  copilot-instructions.md  copilot-setup-steps.yml  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-auto-merge.yml  labeler.yml  release-please.yml  release.yml  stale.yml  typos.yml
apps/desktop/: .prettierignore  CHANGELOG.md  package-lock.json  package.json
apps/desktop/src/: App.tsx
apps/desktop/src-sidecar/: .golangci.yml  go.mod  go.sum
apps/desktop/src-sidecar/cmd/sidecar/: main.go
apps/desktop/src-sidecar/internal/backoff/: backoff.go  backoff_test.go
apps/desktop/src-sidecar/internal/control/: control.go
apps/desktop/src-sidecar/internal/emotes/: badges_builtin.go  bttv.go  bttv_test.go  fetcher.go  fetcher_test.go  ffz.go  ffz_test.go  http.go  seventv.go  seventv_test.go  twitch.go  twitch_test.go  types.go
apps/desktop/src-sidecar/internal/kick/: client.go  client_test.go  types.go
apps/desktop/src-sidecar/internal/ringbuf/: shm_darwin.go  shm_linux.go  shm_windows.go  shm_windows_test.go  writer.go  writer_test.go
apps/desktop/src-sidecar/internal/sidecar/: sidecar.go  sidecar_test.go
apps/desktop/src-sidecar/internal/twitch/: client_test.go  eventsub.go  eventsub_test.go  helix.go  helix_test.go  types.go
apps/desktop/src-sidecar/internal/youtube/: api.go  api_test.go  client.go  client_test.go
apps/desktop/src-sidecar/internal/youtube/ytpb/: stream_list.pb.go  stream_list_grpc.pb.go
apps/desktop/src-sidecar/proto/: stream_list.proto
apps/desktop/src-tauri/: BENCHMARKS.md  Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/benches/: drain_throughput.rs
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: emote_index.rs  host.rs  lib.rs  message.rs  ringbuf.rs  sidecar_commands.rs  sidecar_supervisor.rs
apps/desktop/src-tauri/src/oauth_pkce/: errors.rs  exchange.rs  loopback.rs  mod.rs  pkce.rs  success_page.html
apps/desktop/src-tauri/src/twitch_auth/: commands.rs  manager.rs  mod.rs  tokens.rs
apps/desktop/src-tauri/src/youtube_auth/: auth_state.rs  commands.rs  errors.rs  manager.rs  mod.rs  storage.rs  tokens.rs
apps/desktop/src/components/: ChatFeed.tsx  Header.tsx  MessageInput.tsx  SignIn.tsx  YouTubeSignIn.tsx
apps/desktop/src/lib/: emoteSpans.ts  messageInput.test.ts  messageInput.ts  messageLayout.ts  messageStyle.test.ts  messageStyle.ts  sidecarStatus.test.ts  sidecarStatus.ts  twitchAuth.test.ts  twitchAuth.ts  youtubeAuth.test.ts  youtubeAuth.ts
apps/desktop/src/stores/: badgeStore.test.ts  badgeStore.ts  chatStore.test.ts  chatStore.ts
apps/web/: index.html  package.json  site.webmanifest  wrangler.toml
apps/web/public/: site.webmanifest
apps/web/src/: app.tsx  entry-server.tsx  global.css  layout.css
apps/web/src/components/: GithubPreview.css  GithubPreview.tsx
apps/web/src/lib/: markdown.ts
apps/web/src/routes/: [...404].tsx  contributing.css  contributing.tsx  index.css  index.tsx  readme.tsx
docs/: adr.md  architecture.md  caching.md  distribution.md  frontend.md  moderation.md  performance.md  platform-apis.md  release-strategy.md  stability.md  testing.md
src/: App.tsx
src-sidecar/: go.mod  go.sum
src-sidecar/cmd/sidecar/: main.go
src-sidecar/internal/control/: control.go
src-sidecar/internal/ringbuf/: shm_unix.go  shm_windows.go  writer.go  writer_test.go
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  message.rs  ringbuf.rs
src/components/: ChatFeed.tsx
src/stores/: chatStore.test.ts  chatStore.ts
