[package]
name = "prismoid"
version = "0.0.1"
edition = "2021"

[lib]
name = "prismoid_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.10", features = [] }
tauri-plugin-shell = "2.3"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_Security",
    "Win32_System_Threading",
] }

[features]
# Opt-in feature that exposes internal write + parse helpers to the
# bench binary. Never enable in a release build; the exposed surface
# includes raw ring-write primitives that skip back-pressure.
__bench = []

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "drain_throughput"
harness = false
required-features = ["__bench"]
