[package]
name = "prismoid"
version = "0.0.1"
edition = "2021"
# Disambiguate for `cargo run` / Tauri dev command — the `prismoid_dcf`
# dev tool is a separate bin invoked via `cargo run --bin prismoid_dcf`.
default-run = "prismoid"

[lib]
name = "prismoid_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.10", features = [] }
tauri-plugin-shell = "2.3"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
dotenvy = "0.15"
keyring = { version = "3", default-features = false }
reqwest = { version = "0.13", default-features = false, features = [
    "rustls",
    "json",
] }
twitch_oauth2 = { version = "0.17", default-features = false, features = ["reqwest"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
aho-corasick = "1.1"
arc-swap = "1.7"
rustc-hash = "2.1"

[dev-dependencies]
criterion = "0.5"
httpmock = "0.7"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_Security",
    "Win32_System_Threading",
] }
keyring = { version = "3", default-features = false, features = ["windows-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", default-features = false, features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", default-features = false, features = ["sync-secret-service", "crypto-rust"] }

[features]
# Opt-in feature that exposes internal write + parse helpers to the
# bench binary. Never enable in a release build; the exposed surface
# includes raw ring-write primitives that skip back-pressure.
__bench = []

[[bench]]
name = "drain_throughput"
harness = false
required-features = ["__bench"]
